--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-markdown": "^8.0.3",
     "styled-components": "^6.1.0"
   },
