--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-markdown": "^8.0.3",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "eslint": "8.24.0",
